kubernetes/probe.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: probe
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: probe
    spec:
      containers:
      - name: probe
        image: smugcloud/probe
        ports:
        - containerPort: 9000
---
kind: Service
apiVersion: v1
metadata:
  name: probe
spec:
  selector:
    app: probe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000


---
# Deployment
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: traefik-ingress-controller
  labels:
    k8s-app: traefik-ingress-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik
        name: traefik-ingress-lb
        ports:
        - name: web
          containerPort: 80
          hostPort: 80
        args:
        - --web
        - --kubernetes
      nodeSelector:
        kubernetes.dcos.io/node-type: public
      tolerations:
      - key: "node-type.kubernetes.dcos.io/public"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-service
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      name: web
    - protocol: TCP
      port: 8080
      name: admin
  clusterIP: None
---
#Ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: probe-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend: 
          serviceName: probe
          servicePort: 80
